--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -8,7 +8,7 @@
         <div class="uk-width-expand"></div>
         <small>Admin</small>
         <button mat-button (click)="logout()">Logout</button>
-            <mat-icon>logout</mat-icon>
+        <a mat-button href="/public/home">SINARIA</a>
     </mat-toolbar>
     <!--end toolbar-->
     
