--- a/src/app/public/home/home.component.scss
+++ b/src/app/public/home/home.component.scss
@@ -1,8 +1,11 @@
 
 .uk-card-title {
-    color: rgb(36, 99, 124);
+    color: rgb(158, 45, 41);
     font-size: 30px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-variant: small-caps;
     justify-content: center;
+}
+.h3 {
+    font-size: 20px;
 }
