--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -4,13 +4,18 @@
       <span class="example-spacer"></span>
       <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
       </button>
-       <a mat-button href="/public/home">HOME</a>
+       <a mat-button href="/public/home">BERANDA</a>
+       <a mat-button href="/public/tentangkami">TENTANG KAMI</a>
        <a mat-button href="/public/katalog">KATALOG</a>
-       <ul class="uk-breadcrumb">
+       <a mat-button href="/public/katalog">PROMOSI</a>
+
+        <div class="uk-width-expand"></div>
+        <ul class="uk-breadcrumb">
         <li><a href="public/bantuan">Bantuan</a></li>
-        <li><a href="#">Ikuti Kami</a></li>
-       </ul>
-       <a mat-button href="/public/cart">CART</a>
+    </ul>
+        <div class="col-md-12 uk-text-right">
+       <a mat-button href="/public/katalog">HUBUNGI KAMI</a>
+       </div>
     </mat-toolbar>
   </p>
 
