--- a/src/app/admin/info/info.component.html
+++ b/src/app/admin/info/info.component.html
@@ -1,30 +1,26 @@
-<div class="uk-flex">
-  <div class="uk-card uk-card-default uk-card-body uk-margin-left">2</div>
-  <div>
-    <div class="uk-card uk-card-default">
-        <div class="uk-card-media-right uk-cover-container">
-          <h3 class="uk-card-title">BISKUIT ROMA KELAPA </h3>
-          <img class="uk-border-rectangle" width="200" height="150" src="assets/roma.png">
-        </div>
-        <div class="uk-card-body">
-        <p>Rp 8.000</p>
-          <a href="#" class="uk-button uk-button-text">Read more</a>
-        </div>
-    </div>
-</div>
-
-  <div class="uk-card uk-card-default uk-card-body uk-margin-left">2</div>
-  <div>
-    <div class="uk-card uk-card-default">
-        <div class="uk-card-media-right uk-cover-container">
-          <h3 class="uk-card-title">MONDE BUTTER COOKIES </h3>
-          <img class="uk-border-rectangle" width="200" height="150" src="assets/monde.png">
-        </div>
-        <div class="uk-card-body">
-
-          <p>Rp 8.000</p>
-          <a href="#" class="uk-button uk-button-text">Read more</a>
-        </div>
-    </div>
-</div>
-</div>
+<table class="uk-table uk-table-hover uk-table-divider">
+  <thead>
+      <tr>
+          <th>Nama Karyawan</th>
+          <th>Posisi</th>
+          <th>Kontak Handphone</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td>Andi Demawan</td>
+          <td>Stok Gudang</td>
+          <td>12345</td>
+      </tr>
+      <tr>
+          <td>Rismawati</td>
+          <td>Admin Toko</td>
+          <td>0899999</td>
+      </tr>
+      <tr>
+          <td>Andia setiawan</td>
+          <td>Kurir</td>
+          <td>123456</td>
+      </tr>
+  </tbody>
+</table>
