tekweb edit lagi

--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -14,7 +14,7 @@
         <li><a href="public/bantuan">Bantuan</a></li>
     </ul>
         <div class="col-md-12 uk-text-right">
-       <a mat-button href="/public/katalog">HUBUNGI KAMI</a>
+       <a mat-button href="/public/hubungi">HUBUNGI KAMI</a>
        </div>
     </mat-toolbar>
   </p>
