--- a/src/app/public/tentangkami/tentangkami.component.scss
+++ b/src/app/public/tentangkami/tentangkami.component.scss
@@ -1,6 +1,9 @@
-.mat-card {
-    font-style: unset;
-    font-size: x-large;
-    background-color: aqua;
+.h3 {
+    font-size: 30px;
+    font-style: italic;
+}
+.uk-card-title {
+    font-size: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     
 }
