--- a/src/app/public/tentangkami/tentangkami.component.html
+++ b/src/app/public/tentangkami/tentangkami.component.html
@@ -1,1 +1,22 @@
-<mat-card>SEJARAH</mat-card>
+
+<div class="uk-card uk-card-default uk-card-body uk-width-1-2@m">
+    <h3 class="uk-card-title">SEJARAH</h3>
+        <img src="assets/kawah1.jpg" alt="" uk-cover>
+    <p>Lorem ipsum color sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+</div>
+
+<div class="uk-card uk-card-default uk-card-body uk-width-1-2@m">
+    <h3 class="uk-card-title">VISI dan MISI</h3>
+    <div class="uk-column-1-2 uk-column-divider">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+    
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    
+        <blockquote cite="#" class="uk-column-span">
+            <p>All we have to decide is what to do with the time that is given us.</p>
+            <footer>Gandalf in in <cite><a href="">The Fellowship of the Ring</a></cite></footer>
+        </blockquote>
+    
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+    </div>
+    </div>
