--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
       <mat-card-title>Produt kita</mat-card-title>
       <mat-card-subtitle>CV SINARIA</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="/examples/SINARIA.png">
+    <img mat-card-image src="/assets/SINARIA.png">
     <mat-card-content>
       <p>
         Sinaria grosir merupakan small bisnis yang dibangun oleh Sabda Elvan pada tahun 2019.
