--- a/src/app/public/tentangkami/tentangkami.component.html
+++ b/src/app/public/tentangkami/tentangkami.component.html
@@ -6,7 +6,8 @@
 </div>
 
 <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m">
-    <h3 class="uk-card-title">VISI dan MISI</h3>
+    <h3 class="uk-card-title uk-card-media-top">VISI dan MISI</h3>
+    <h2> VISI </h2>
     <div class="uk-column-1-2 uk-column-divider">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
     
@@ -16,7 +17,7 @@
             <p>All we have to decide is what to do with the time that is given us.</p>
             <footer>Gandalf in in <cite><a href="">The Fellowship of the Ring</a></cite></footer>
         </blockquote>
-    
+    <h2>MISI</h2>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
     </div>
     </div>
