--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,8 +1,8 @@
-
-<div class="uk-child-width-1-2@s uk-grid-match" uk-grid>
-  <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" style="background-image: url(assets/SINARIA.png);">
+<div class="uk-flex uk-flex-middle uk-flex-center uk-height-viewport" style="background-color: rgb(255, 255, 255) ; background-size: cover; background-position: center;">  
+  <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle; background-color: blue; background-position: center;">
     </div>
       <div class="uk-card uk-card-hover uk-card-body">
+        <img src="assets/buy.png" width="200" height="100" alt="">
           <h3 class="uk-card-title">SELAMAT DATANG</h3>
           <h4><span class="uk-text-right"></span></h4>
           <h4>SINARIA GROSIR menyediakan kebutuhan sehari-hari dengan
@@ -14,5 +14,6 @@
         </div>
       </div>
 </div>
+
 
 
