--- a/src/app/public/hubungi/hubungi.component.html
+++ b/src/app/public/hubungi/hubungi.component.html
@@ -1,1 +1,8 @@
-<p>hubungi works!</p>
+<div class="uk-flex uk-flex-middle uk-flex-center uk-height-viewport" style="background-color: white ; background-size: cover; background-position: center;">  
+    <mat-card class="uk-width-1-3@m uk-width-1-2@s">
+        <div class="uk-flex uk-flex-center uk-margin-medium-bottom">
+            <h3>KONTAK KAMI</h3>
+        </div>
+    </mat-card>
+</div>
+
