--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,15 +1,17 @@
 <div class="uk-flex uk-flex-middle uk-flex-center uk-height-viewport" style="background-color: rgb(255, 255, 255) ; background-size: cover; background-position: center;">  
-  <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle; background-color: blue; background-position: center;">
+  <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" style="background-color:bisque ; background-position: center;">
     </div>
       <div class="uk-card uk-card-hover uk-card-body">
         <img src="assets/buy.png" width="200" height="100" alt="">
           <h3 class="uk-card-title">SELAMAT DATANG</h3>
           <h4><span class="uk-text-right"></span></h4>
-          <h4>SINARIA GROSIR menyediakan kebutuhan sehari-hari dengan
-            harga yang miring, mudah, dan terpecaya</h4>
+          <blockquote cite="#" class="uk-column-span">
+            <p>SINARIA GROSIR menyediakan kebutuhan sehari-hari dengan
+              harga yang miring, mudah, dan terpecaya.</p>
+        </blockquote>
           
           <div class="uk-card-footer">
-            <a href="public/katalog" class="uk-button uk-button-text">KATALOG</a>
+            <a href="public/katalog" class="uk-button uk-button-text uk-button">LIHAT KATALOG</a>
             
         </div>
       </div>
