--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -7,7 +7,7 @@
        <a mat-button href="/public/home">BERANDA</a>
        <a mat-button href="/public/tentangkami">TENTANG KAMI</a>
        <a mat-button href="/public/katalog">KATALOG</a>
-       <a mat-button href="/public/katalog">PROMOSI</a>
+       <a mat-button href="/public/hubungi">PEMESANAN</a>
 
         <div class="uk-width-expand"></div>
         <ul class="uk-breadcrumb">
