--- a/src/app/public/tentangkami/tentangkami.component.html
+++ b/src/app/public/tentangkami/tentangkami.component.html
@@ -1,23 +1,23 @@
-
+<div class="uk-flex uk-flex-middle uk-flex-center uk-height-viewport" style="background-color: white ; background-size: cover; background-position: center;">
 <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m">
     <h3 class="uk-card-title">SEJARAH</h3>
-        <img src="assets/kawah1.jpg" alt="" uk-cover>
-    <p>Lorem ipsum color sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <img src="assets/logo.png" width="420" height="400" alt="">
+    <h3>Awal mulai berdirinya Sinaria Grosir pada tahun 2019 adalah sebagai toko ritel UMKM yang dirilis oleh seorang
+        Mahasiswa guna memenuhi kebutuhan rumah tangga. Sinaria grosir menyediakan berbagai kebutuhan rumah tangga
+    seperti makanan, minuman, dan peralatan rumah tangga lainnya dengan harga yang terjangkau</h3>
 </div>
 
-<div class="uk-card uk-card-default uk-card-body uk-width-1-2@m">
-    <h3 class="uk-card-title uk-card-media-top">VISI dan MISI</h3>
-    <h2> VISI </h2>
+<div class="uk-card uk-card-default uk-card-body uk-width-1-2@m"  style="background-color: bisque;">
+    <h1> TUJUAN </h1>
     <div class="uk-column-1-2 uk-column-divider">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+        <h3> Ingin mengembangkan usaha UMKM salah satunya dibidang toko ritel, sehingga memperluas lowongan pekerjaan dan mempermudah masyakarat untuk memenuhi kebutuhan. </h3>
     
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h3> Menyediakan kebutuhan rumah tangga dengan harga yang sangat terjangkau terkhusus bagi masyarakat yang ingin menjadi reseller akan mendapatkan harga yang lebih murah. </h3>
     
         <blockquote cite="#" class="uk-column-span">
-            <p>All we have to decide is what to do with the time that is given us.</p>
-            <footer>Gandalf in in <cite><a href="">The Fellowship of the Ring</a></cite></footer>
+            <p> "Belanjalah sesuai dengan kebutuhanmu dan Jangan lupa berbagi dengan sesama."</p>
         </blockquote>
-    <h2>MISI</h2>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+    
+    </div>
     </div>
     </div>
