--- a/src/app/public/tentangkami/tentangkami.component.scss
+++ b/src/app/public/tentangkami/tentangkami.component.scss
@@ -3,7 +3,12 @@
     font-style: italic;
 }
 .uk-card-title {
-    font-size: 30px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    
+    color:rgb(18, 44, 78);
+    font-size: 35px;
+    font-family: 'Lucida Sans Unicode', 'Geneva', Verdana, sans-serif;
+    font-style: bold;
+}
+.h3 {
+    font-size: 20px;
+    color: yellow;
 }
