--- a/src/app/public/hubungi/hubungi.component.html
+++ b/src/app/public/hubungi/hubungi.component.html
@@ -1,7 +1,8 @@
 <div class="uk-flex uk-flex-middle uk-flex-center uk-height-viewport" style="background-color: white ; background-size: cover; background-position: center;">  
     <mat-card class="uk-width-1-3@m uk-width-1-2@s">
         <div class="uk-flex uk-flex-center uk-margin-medium-bottom">
-            <h3>KONTAK KAMI</h3>
+            <h2>KONTAK KAMI UNTUK PEMESANAN</h2>
+            
         </div>
     </mat-card>
 </div>
