--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -8,7 +8,7 @@
         <div class="uk-width-expand"></div>
         <small>Admin</small>
         <button mat-button (click)="logout()">Logout</button>
-        <a mat-button href="/public/home">SINARIA</a>
+        
     </mat-toolbar>
     <!--end toolbar-->
     
@@ -34,11 +34,11 @@
         </mat-list-item>
         <mat-list-item routerLink="/admin/info">
             <mat-icon matListIcon>analytics</mat-icon>
-            <h3 matLine>Info</h3>
+            <h3 matLine>Daftar Karyawan</h3>
         </mat-list-item>
         <mat-list-item routerLink="/public/home">
             <mat-icon matListIcon>leaderboard</mat-icon>
-            <h3 matLine>SINARIA</h3>
+            <h3 matLine>SINARIA GROSIR</h3>
         </mat-list-item>
        </mat-nav-list>
     
