--- a/src/app/public/makanan/makanan.component.html
+++ b/src/app/public/makanan/makanan.component.html
@@ -7,9 +7,8 @@
     </mat-card-header>
     <img mat-card-image src="/assets/roma.png">
     <mat-card-content>
-      <p>
-        Rp. 8.000,00,-
-      </p>
+      <p>Harga: Rp8.000 /pcs </p>
+      <p>Harga: Rp94.000 /12pcs</p>
     </mat-card-content>
   </mat-card>
 
@@ -21,9 +20,8 @@
     </mat-card-header>
     <img mat-card-image src="/assets/monde.png">
     <mat-card-content>
-      <p>
-        Rp. 25.000,00,-
-      </p>
+      <p>Harga: Rp25.000 /pcs </p>
+      <p>Harga: Rp295.000 /12pcs</p>
     </mat-card-content>
   </mat-card>
 </div>
