--- a/src/app/public/minuman/minuman.component.html
+++ b/src/app/public/minuman/minuman.component.html
@@ -7,9 +7,8 @@
       </mat-card-header>
       <img mat-card-image src="/assets/kapalapi.png">
       <mat-card-content>
-        <p>
-          Rp. 8.000,00,-
-        </p>
+        <p>Harga: Rp7.000 /pcs </p>
+        <p>Harga: Rp165.000 /24pcs</p>
       </mat-card-content>
     </mat-card>
   
@@ -21,9 +20,21 @@
       </mat-card-header>
       <img mat-card-image src="/assets/coklat.png">
       <mat-card-content>
-        <p>
-          Rp. 3.000,00,-
-        </p>
+        <p>Harga: Rp3.000 /pcs </p>
+        <p>Harga: Rp70.000 /24pcs</p>
+      </mat-card-content>
+    </mat-card>
+
+    <mat-card class="goday-card">
+      <mat-card-header>
+        <div mat-card-avatar class="goday-header-image"></div>
+        <mat-card-title>GoodDay</mat-card-title>
+        <mat-card-subtitle>Sinaria Grosir</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image src="/assets/godday.png">
+      <mat-card-content>
+        <p>Harga: Rp3.000 /pcs </p>
+        <p>Harga: Rp70.000 /24pcs</p>
       </mat-card-content>
     </mat-card>
   </div>
