--- a/src/app/public/perlengkapan/perlengkapan.component.html
+++ b/src/app/public/perlengkapan/perlengkapan.component.html
@@ -1,1 +1,41 @@
-<p>perlengkapan works!</p>
+<div class="uk-flex">
+  <mat-card class="bimoli-card">
+      <mat-card-header>
+        <div mat-card-avatar class="bimoli-header-image"></div>
+        <mat-card-title>BIMOLI MINYAK GORENG 2Liter</mat-card-title>
+        <mat-card-subtitle>Sinaria Grosir</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image src="/assets/bimoli.png">
+      <mat-card-content>
+        <p>Harga: Rp25.000 /pcs </p>
+        <p>Harga: Rp122.000 /5pcs</p>
+      </mat-card-content>
+    </mat-card>
+  
+    <mat-card class="pepso-card">
+      <mat-card-header>
+        <div mat-card-avatar class="pepso-header-image"></div>
+        <mat-card-title>PEPSODENT PASTA GIGI</mat-card-title>
+        <mat-card-subtitle>Sinaria Grosir</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image src="/assets/pepso.png">
+      <mat-card-content>
+        <p>Harga: Rp7.000 /pcs </p>
+        <p>Harga: Rp33.000 /5pcs</p>
+      </mat-card-content>
+    </mat-card>
+
+    <mat-card class="mamalemon-card">
+        <mat-card-header>
+          <div mat-card-avatar class="mamalemon-header-image"></div>
+          <mat-card-title>MAMA LEMON 1Liter</mat-card-title>
+          <mat-card-subtitle>Sinaria Grosir</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="/assets/mamaalemon.png">
+        <mat-card-content>
+          <p>Harga: Rp12.000 /pcs </p>
+          <p>Harga: Rp58.000 /5pcs</p>
+        </mat-card-content>
+      </mat-card>
+  </div>
+  
