--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@ body { margin: 0; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman
 @include mat-core();
 
 // Define your application's custom theme.
-$primary: mat-palette($mat-yellow, 200);
+$primary: mat-palette($mat-grey, 800);
 $accent:  mat-palette($mat-pink, A200, A100, A400);
 $theme: mat-light-theme((
   color: (
