--- a/src/app/public/hubungi/hubungi.component.html
+++ b/src/app/public/hubungi/hubungi.component.html
@@ -1,8 +1,13 @@
 <div class="uk-flex uk-flex-middle uk-flex-center uk-height-viewport" style="background-color: white ; background-size: cover; background-position: center;">  
     <mat-card class="uk-width-1-3@m uk-width-1-2@s">
         <div class="uk-flex uk-flex-center uk-margin-medium-bottom">
-            <h2>KONTAK KAMI UNTUK PEMESANAN</h2>
-            
+            <h2>KONTAK KAMI UNTUK PEMESANAN</h2>  
+        </div>
+        <div>
+            <span class="uk-text-middle">whatsapp : +123456789 </span>
+        </div>
+        <div>
+            <span class="uk-text-bottom">Atau kunjungi store kami di Manukan, Condongcatur, Yogyakarta </span>
         </div>
     </mat-card>
 </div>
