--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -14,6 +14,6 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>Lihat disini</button>
+      <a mat-button href="/public/home">LIHAT DISINI</a>
     </mat-card-actions>
   </mat-card>
